# OCR_recognize_slides_label

./: .gitignore  README.md  pyproject.toml  run_command
docs/: CHANGELOG.md  DEMANDS.MD
docs/plans/: 2026-03-23-preview-slide-summary-design.md  2026-03-23-preview-slide-summary-implementation.md  2026-03-23-svs-label-ocr-pipeline.md  2026-03-24-explicit-openai-key-and-summary-design.md  2026-03-24-explicit-openai-key-and-summary-implementation.md  2026-03-24-live-progress-design.md  2026-03-24-live-progress-implementation.md  2026-03-24-runtime-log-design.md  2026-03-24-runtime-log-implementation.md  2026-03-26-openai-image-input-design.md  2026-03-26-openai-image-input-implementation.md
output/: output.csv
src/svs_label_ocr/: cli.py  export.py  label_extractor.py  line_images.py  ocr.py  pipeline.py  preprocess.py  preview.py  scanner.py  segmentation.py
src/svs_label_ocr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_cli_summary.py  test_export.py  test_integration_smoke.py  test_label_extractor.py  test_line_images.py  test_live_progress.py  test_ocr.py  test_ocr_provider_config.py  test_pipeline.py  test_preprocess.py  test_preview.py  test_scanner.py  test_segmentation.py  test_summary.py
